Service Worker registration

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./files/styles.css">
 
+  <script>
+
+    if("serviceWorker" in navigator){
+      window.addEventListener("load",()=>{
+        navigator.serviceWorker.register("/sw.js");
+      });
+    }
+
+  </script>
+
     <!-- =====BOX ICONS===== -->
     <link href="./files/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./files/styles1.css">
