--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
   </script>
 
+  <link rel="manifest" href="./files/manifest.json">k
+
     <!-- =====BOX ICONS===== -->
     <link href="./files/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./files/styles1.css">
@@ -54,6 +56,9 @@
             </li>
             <li class="nav-item">
               <a href="./index.html#contact" class="nav-link contact">Contact</a>
+            </li>
+            <li class="nav-item">
+              <button id="swBwtton" class="nav-link clickme"> CLick Me</button>
             </li>
           </ul>
         </div>
