--- a/index.html
+++ b/index.html
@@ -18,6 +18,36 @@
       });
     }
 
+
+    let deferredPromt;
+
+window.addEventListener("beforeinstallprompt", (e)=>{
+
+    e.preventDefault();
+
+    deferredPromt = e;
+
+});
+
+document.getElementById("swBwtton").addEventListener("click", (e)=>{
+    deferredPromt.prompt();
+    console.log("prompt start");
+    deferredPromt.userChoice.then((choiceResult)=>{
+        if(choiceResult.outcome == "accepted"){
+            console.log("user accepted the A2HS prompt");
+        }
+
+        deferredPromt = null;
+
+    })
+});
+
+window.addEventListener("appinstalled",(evnt)=>{
+    app.logEvent("a2hs","installed");
+});
+
+
+
   </script>
 
   <link rel="manifest" href="./files/manifest.json">k
